--- a/app/src/main/res/layout/item_feed_main.xml
+++ b/app/src/main/res/layout/item_feed_main.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:adjustViewBounds="true"
+                android:transitionName="testTransition"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
